--- a/ViewCustomer/style.css
+++ b/ViewCustomer/style.css
@@ -2,22 +2,41 @@ html {
     scroll-behavior: smooth;
   }
   body{
-      background:  linear-gradient(90deg, #eb3349 0%, #F45C43 50%, rgba(252,176,69,1) 100%);
+      /* background:  linear-gradient(90deg, #eb3349 0%, #F45C43 50%, rgba(252,176,69,1) 100%); */
+      background-image: url('../assets/background.png');
+      background-size: cover;
       color: rgb(255, 250, 250);
       font-family: "Sofia";
   }
+  body::-webkit-scrollbar{
+      width: 10px;
+  }
+  body::-webkit-scrollbar-track{
+      background-color: black;
+      box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.61);
+      border-radius: 2px;
+  }
+  body::-webkit-scrollbar-thumb{
+      background: rgb(56, 63, 65);
+      border-radius: 5px;
+  }
   .container {
-      margin: 0 auto;
-      width: 430px; 
-      background-color: rgba(27, 27, 50, 0.8);
+      margin: 20px auto;
+      width: 430px;
+      background: #0000008e;
       padding: 50px;
       position: relative;
-    border-radius: 8px;
+      border-radius: 8px;
   }
   
+  input {
+    border-radius: 8px;
+    height: 24px;
+  }
   .submit-button {
-    background: lightgreen;
-    color: black;
-    border-radius: 2px;
+    background-color:rgba(22, 29, 22, 0.753);
+    color: white;
+    border-radius: 8px;
     cursor: pointer;
+    height: 24px;
   }
