--- a/calculator/CarInsuranceCalculator.css
+++ b/calculator/CarInsuranceCalculator.css
@@ -1,6 +1,7 @@
 html, body{
 	  height: 90%;
-	  background:  linear-gradient(90deg, #eb3349 0%, #F45C43 50%, rgba(252,176,69,1) 100%);
+	  background-image: url('../assets/background.png');
+	  background-size: cover;
 	  color: rgb(255, 250, 250);
 	  font-family: "Sofia";
   }
@@ -9,7 +10,7 @@ html, body{
 .container {
 	margin: 0 auto;
 	width: 430px; 
-    background-color: rgba(27, 27, 50, 0.8);
+    background: #00000075;
     padding: 50px;
     position: relative;
 	border-radius: 8px;
@@ -17,15 +18,12 @@ html, body{
 
 
 header {
-	font-size: 29px;
+	font-size: 32px;
 	margin: 0 auto;
     width: 441px; 
-    background-color: white;
     padding: 15px;
     position: relative;
   	top: 50%;
-	font-family: "Sofia";
-	color: black;
 	text-align: center; 
  	margin: -20px 0 0 -20px;
 
