--- a/register/style.css
+++ b/register/style.css
@@ -23,10 +23,24 @@ body::before {
   height: 100%;
   width: 100%;
   z-index: -1;
-  background:  linear-gradient(90deg, #eb3349 0%, #F45C43 50%, rgba(252,176,69,1) 100%);
+  /* background:  linear-gradient(90deg, #eb3349 0%, #F45C43 50%, rgba(252,176,69,1) 100%); */
+  background-image: url('../assets/background.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+}
+
+body::-webkit-scrollbar{
+  width: 10px;
+}
+body::-webkit-scrollbar-track{
+  background-color: black;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.61);
+  border-radius: 2px;
+}
+body::-webkit-scrollbar-thumb{
+  background: rgb(56, 63, 65);
+  border-radius: 5px;
 }
 
 h1 {
@@ -66,8 +80,10 @@ button {
 }
 
 .container {
-  width: 100%;
   margin: 3.125rem auto 0 auto;
+  background: #0000008e;
+  padding: 2.5rem 0.625rem;
+  border-radius: 0.5rem;
 }
 
 @media (min-width: 576px) {
@@ -106,9 +122,9 @@ button {
 /* form */
 
 form {
-  background:  rgba(27, 27, 50, 0.8);
+  background: #0000008e;
   padding: 2.5rem 0.625rem;
-  border-radius: 0.25rem;
+  border-radius: 0.5rem;
 }
 
 @media (min-width: 480px) {
