--- a/calculator/CarInsuranceCalculator.css
+++ b/calculator/CarInsuranceCalculator.css
@@ -14,6 +14,7 @@ html, body{
     padding: 50px;
     position: relative;
 	border-radius: 8px;
+	border: 0.1px solid rgba(245, 245, 245, 0.233);
 }
 
 
