--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ nav{
     height: 100%;
     overflow: hidden;
     border-radius: .5rem;
+    border: 0.1px solid rgba(245, 245, 245, 0.233);
 
 }
 
@@ -42,7 +43,7 @@ nav a {
 
 }
 nav a:hover{
-    background-color: snow;
+    background-color: rgba(255, 250, 250, 0.658);
     color: black;
 
 }
@@ -53,6 +54,7 @@ header{
     padding: 30px;
     text-align: center;
     border-radius: .5rem;
+    border: 0.1px solid rgba(245, 245, 245, 0.233);
 }
 .card{
     /* background-color: #331408; */
@@ -60,7 +62,7 @@ header{
     margin: 20px;
     padding: 10px;
     border-radius: .5rem;
-    border: 0.25px dotted whitesmoke;
+    border: 0.1px solid rgba(245, 245, 245, 0.233);
 }
 /* .card:hover{
     box-shadow: 0px 5px 5px rgb(0, 0, 0), 0px 5px 5px rgb(0, 0, 0); 
@@ -89,6 +91,7 @@ header{
 footer{
     background: #00000075;
     margin : 10px 0px 10px 0px;
+    border: 0.1px solid rgba(245, 245, 245, 0.233);
     padding: 30px;
     border-radius: .5rem;
     text-align: center;
@@ -106,7 +109,8 @@ footer{
     }
 }
 .cases label{
-  margin-left: 30px;
+  margin-left: 10px;
+  margin-right: 5px;
   font-size: 20px;
   width: 20%;
   color: aliceblue;
@@ -114,7 +118,7 @@ footer{
   
 }   
 .cases progress{
-  width: 70%;
+  width: 100%;
   height: 30px;
  
 }
@@ -127,11 +131,12 @@ footer{
     background: #00000075;
     text-decoration: none;
     border-radius: .5rem;
+    border: 0.1px solid rgba(245, 245, 245, 0.233);
          
 }
 
 .bottom:hover {
-    background-color: snow;
+    background-color: rgba(255, 250, 250, 0.658);
     color: black;
 }
 
